k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Using 'latest' tag is not allowed."
        pattern:
          spec:
            containers:
            - image: "!*:latest"
    - name: privileged-containers
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            containers:
            - securityContext:
                privileged: false
    - name: check-resource
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "CPU and memory requests/limits are required."
        pattern:
          spec:
            containers:
            - resources:
                requests:
                  memory: "?*"
                  cpu: "?*"
                limits:
                  memory: "?*"
                  cpu: "?*"

    - name: check-run-as-nonroot
      match:
        any:
        - resources:
            kinds:
            - Pod
      validate:
        message: "Containers must run as non-root users."
        pattern:
          spec:
            containers:
            - securityContext:
                runAsNonRoot: true
